syntax = "proto3";
package kratos.api;

option go_package = "app/gateway/interface/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
}

message Server {
  message Info {
    string project = 1;
    string name = 2;
  }
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message Tracer {
    Jaeger jaeger = 1;
  }
  message Jaeger {
    string endpoint = 1;
  }
  HTTP http = 1;
  Tracer tracer = 2;
  Info info = 3;
}

message Data {
  message Consul {
    string address = 1;
    string scheme = 2;
    string path_prefix = 3;
    string data_center = 4;
    google.protobuf.Duration wait_time = 5;
    string token = 6;
    string token_file = 7;
    string namespace = 8;
    string partition = 9;
  }
  Consul consul = 1;
}

message Auth {
  message Jwt {
    string key = 1;
    string issue = 2;
  }
  Jwt jwt = 1;
}